# dinova

./: .gitignore  LICENSE  README.md  requirements.txt
dinova_bringup/: CMakeLists.txt  package.xml
dinova_bringup/config/: multi_dinova.rviz  vicon_dingo1.yaml  vicon_dingo2.yaml
dinova_bringup/launch/: dingo.launch  dinova.launch  kinova.launch  vicon.launch
dinova_bringup/scripts/: battery_checker
dinova_control/: CMakeLists.txt  README.md  package.xml  setup.py
dinova_control/config/: config.yaml  dingo1_dinova.urdf  dingo1_dinova_lidar.urdf  dingo2_dinova.urdf  dingo2_dinova_lidar.urdf  dinova.urdf  dinova_lidar.urdf
dinova_control/launch/: dingo_control.launch  dingo_teleop.launch  dinova_generate_fk.launch  kinova_generate_fk.launch
dinova_control/scripts/: dingo_state_publisher.py  dinova_state_publisher.py  generate_fk.py  kinova_driver.py  test.py
dinova_control/src/: kinova_client.py  state.py
dinova_control/src/autogen/: fk_dingo1_dinova.cpp  fk_dingo1_dinova_lidar.cpp  fk_dingo1_kinova.cpp  fk_dingo2_dinova.cpp  fk_dingo2_dinova_lidar.cpp  fk_dingo2_kinova.cpp  fk_dinova.cpp  fk_dinova_lidar.cpp
dinova_control/src/dinova_control/: dinova_fk.py  kinova_client.py  state.py  utilities.py
dinova_description/: CMakeLists.txt  README.md  package.xml
dinova_description/config/: config.rviz
dinova_description/launch/: visualize_dingo_omni.launch  visualize_dinova.launch  visualize_dinova_lidar.launch  visualize_kinova.launch
dinova_description/urdf/: dingo-o.urdf.xacro  dingo.xacro  dingo_omni.xacro  dingo_omni_macro.xacro  dinova.xacro  dinova_lidar.urdf  dinova_lidar.xacro  kinova.xacro  kinova1_macro.xacro  kinova2_macro.xacro  kinova_gripper_macro.xacro  kinova_macro.xacro  real_dingo-o.urdf.xacro  real_dinova.urdf.xacro
dinova_gazebo/: CMakeLists.txt  README.md  package.xml  setup.py
dinova_gazebo/config/: dingo.rviz  dingo_kinova.world  dingo_kinova_dyn_obstacle.world  dinova.rviz  gazebo_controllers.yaml  kinova.rviz
dinova_gazebo/dynamic_obstacle_plugin/: dynamic_obstacle_plugin.cpp
dinova_gazebo/launch/: dingo.launch  dinova.launch  gazebo_dingo.launch  gazebo_dinova.launch  gazebo_kinova.launch  kinova.launch
dinova_gazebo/scripts/: dinova_gazebo_state_publisher.py  kinova_gazebo_state_publisher.py  obstacle_spawn_service.py
dinova_gazebo/srv/: SpawnObstacles.srv
dinova_gazebo/urdf/: dingo_gazebo.xacro  dingo_gazebo_transm_macro.xacro  dinova_gazebo.xacro  dinova_gazebo_lidar.xacro  kinova_gazebo.xacro  kinova_gazebo_transm_macro.xacro  simple_sphere_template.sdf
